add optional email field to contact form and redirect register page to WhatsApp contact
- add email field to contact form schema with optional validation
- include email in contact API route body destructuring and email notifications (text and HTML)
- display "Not provided" fallback when email is not submitted
- replace register page profile creation form with WhatsApp contact CTA
- update dashboard candidate section to direct users to WhatsApp for profile updates instead of profile creation page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -182,7 +182,7 @@
     "cta": {
       "title": "Ready to Find 'The One'?",
       "description": "Your search for a meaningful, lasting partnership starts here. Let us be your guide on the beautiful journey to marriage.",
-      "button": "Create Your Profile"
+      "button": "Chat on WhatsApp"
     }
   },
   "register": {
